Jun 14, 2007

  * FIXED: Saving literal(rdf:'XMLLiteral').

Jun 9, 2007

  * FIXED: Avoid type error in literal indexing code when asserting
    non-atom literals.

Apr 27, 2007

  * FIXED: Bug#279: handling rdfs:Container in rdfs_member/2.

Mar 30, 2007

  * FIXED: rdf_has/3 can return triples that should not match.  Jochem
    Liem.

Mar 27, 2007

  * FIXED: Typo in rdf_estimate_complexity/4 docs.

Mar 14, 2007

  * FIXED: rdf_has/3 to use empty reachability matrix after a property
    is added.

  * FIXED: atom-reference issue in rdf_update/[4,5].  Jochem Liem.

Mar 13, 2007

  * FIXED: Send monitor events on begin/end of nested transactions.
    Required to make rdf_persistency work properly if RDF operations
    such as rdf_reset_db and rdf_load are nested in transactions.

Mar 9, 2007

  * FIXED: reset some more fields in rdf_reset_db, avoiding continuous
    re-hash after rdf_reset_db/0.

  * FIXED: rdf_persistency to clear file repository on rdf_reset_db.

Mar 8, 2007

  * FIXED: locking issue in rdf_reachable/3 and maintaining active-query
    count.  Thanks to Jacco van Ossenbruggen and Michiel Hildebrand for
    a reproducable case.

Mar 6, 2007

  * ADDED: application/rdf+xml to rdf_http_plugin.pl.  Yves Raimond.

Mar 5, 2007

  * ADDED: rdf_load/2, allow for base_uri(-URI) to get access to the named
    graph a source is loaded into.  Jacco van Ossenbruggen.

Jan 28, 2007

  * FIXED: rdf_meta declaration for rdf_update/5.  Michiel Hildebrand.

Jan 26, 2007

  * FIXED: Atom-referencing problem in literal index-map.

  * FIXED: Various URL/File issues in rdf_db.pl and rdf_edit.pl.  Fixed
    Triple20 modification issues.  Anjo Anjewierden.

Jan 18, 2007

  * ADDED: loading of rdf embedded in xhtml.  Yves Raimond.

Jan 16, 2007

  * FIXED: Various issues related to persistency handling after introduction
    of new load plugin structure.

  * MODIFIED: Source info as created by rdf_load/2 is now always a URI.

Jan 15, 2007
